da_lab/exp4/pig_1724383400803.log
Pig Stack Trace
---------------
ERROR 1121: Python Error.   File "/tmp/pig16559732039392081001tmp/uppercase_udf.py", line 5
    import sys
    ^
SyntaxError: mismatched input 'import' expecting INDENT

org.apache.pig.backend.executionengine.ExecException: ERROR 1121: Python Error.   File "/tmp/pig16559732039392081001tmp/uppercase_udf.py", line 5
    import sys
    ^
SyntaxError: mismatched input 'import' expecting INDENT

	at org.apache.pig.scripting.jython.JythonScriptEngine$Interpreter.execfile(JythonScriptEngine.java:249)
	at org.apache.pig.scripting.jython.JythonScriptEngine$Interpreter.init(JythonScriptEngine.java:163)
	at org.apache.pig.scripting.jython.JythonScriptEngine.registerFunctions(JythonScriptEngine.java:344)
	at org.apache.pig.PigServer.registerCode(PigServer.java:692)
	at org.apache.pig.parser.RegisterResolver.parseRegister(RegisterResolver.java:53)
	at org.apache.pig.tools.grunt.GruntParser.processRegister(GruntParser.java:465)
	at org.apache.pig.tools.pigscript.parser.PigScriptParser.parse(PigScriptParser.java:550)
	at org.apache.pig.tools.grunt.GruntParser.parseStopOnError(GruntParser.java:231)
	at org.apache.pig.tools.grunt.GruntParser.parseStopOnError(GruntParser.java:206)
	at org.apache.pig.tools.grunt.Grunt.exec(Grunt.java:81)
	at org.apache.pig.Main.run(Main.java:501)
	at org.apache.pig.Main.main(Main.java:176)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:566)
	at org.apache.hadoop.util.RunJar.run(RunJar.java:328)
	at org.apache.hadoop.util.RunJar.main(RunJar.java:241)
Caused by:   File "/tmp/pig16559732039392081001tmp/uppercase_udf.py", line 5
    import sys
    ^
SyntaxError: mismatched input 'import' expecting INDENT

	at org.python.core.ParserFacade.fixParseError(ParserFacade.java:95)
	at org.python.core.ParserFacade.parse(ParserFacade.java:190)
	at org.python.core.Py.compile_flags(Py.java:1956)
	at org.python.util.PythonInterpreter.execfile(PythonInterpreter.java:296)
	at org.apache.pig.scripting.jython.JythonScriptEngine$Interpreter.execfile(JythonScriptEngine.java:217)
	... 17 more
================================================================================
